--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,10 @@
 
 * Localization - Added german translations
 
+= 1.0.10 - November 2021, 2021 =
+
+* add german translations
+
 = 1.0.2 - March 19, 2019 =
 
 * Fix - WooCommerce Subscription > 2.5.0
